# Inventory-System

./: CMakeLists.txt  InventorySystem.pro  appresources.qrc  main.cpp
Controller/: LoginController.cpp  LoginController.h  MainController.cpp  MainController.h
Model/: Borrow.cpp  Borrow.h  BorrowRepository.cpp  BorrowRepository.h  Item.cpp  Item.h  ItemRepository.cpp  ItemRepository.h  User.cpp  User.h  UserRepository.cpp  UserRepository.h
Resources/: itemList.txt  userList.txt
View/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
